--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
+body {
+	background-color: #EFF7FF;
+	font: 300 16px/22px "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 div {
 	background-color: lightblue;
 }
