Added bottom margin

--- a/main.css
+++ b/main.css
@@ -39,4 +39,5 @@ div:last-child {
 	border-bottom: 1px solid lightblue;
 	border-bottom-left-radius: 5px;
 	border-bottom-right-radius: 5px;
+	margin-bottom: 5%;
 }
