--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ a {
 	text-decoration: none;
 }
 
-.row {
+.row, .row-2 {
 	background-color: white;
 	padding: 9px 12px;
 	border: 1px solid lightblue;
